tweak: update change history

--- a/doc/CHANGELOG.txt
+++ b/doc/CHANGELOG.txt
@@ -1,3 +1,8 @@
+07 Apr 2005 (whalin)
+	-- fixed getCounter
+	-- added method to check for existance of key
+	-- update to unit tests
+
 20 Mar 2005 (whalin)
 	-- released as version 1.2.1
 	-- make non-blocking connect optional
