--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -1,7 +1,7 @@
 To Do:
 
+- support collections in NativeHandler
 - clean up and add more unit tests
-- allow for multiple pools
 - make reconnection after a server failure an optional value
 - back socket connection thread w/ a thread pool
 - Try different compression streams as gzip stream is slow. (JNI??)
