bugfix: fix rehashing to match perl client

--- a/doc/CHANGELOG.txt
+++ b/doc/CHANGELOG.txt
@@ -3,6 +3,7 @@
 	-- added method to check for existance of key
 	-- update to unit tests
 	-- support multiple pools in SockIOPool
+	-- fix failover rehashing to match perl algorithm
 
 20 Mar 2005 (whalin)
 	-- released as version 1.2.1
