--- a/doc/CHANGELOG.txt
+++ b/doc/CHANGELOG.txt
@@ -1,3 +1,9 @@
+25 Nov 2005 (whalin, chawla, watts)
+	-- released as 1.3.1
+	-- allow passing of classloader for use in deserialization (chawla)
+	-- additional param checking (bug reported by young)
+	-- additional stats methods (watts)
+
 09 Sep 2005 (whalin)
 	-- fix keyExists for counters
 	-- stop using jikes
