--- a/doc/CHANGELOG.txt
+++ b/doc/CHANGELOG.txt
@@ -1,3 +1,6 @@
+08 Feb 2006 (whalin)
+	-- switched to using java 5 syntax (generics,stringbuilder)
+
 25 Nov 2005 (whalin, chawla, watts)
 	-- released as 1.3.2
 	-- allow passing of classloader for use in deserialization (chawla)
